--- a/magic.html
+++ b/magic.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
-    <a href="./magic.html">Magic</a>
+    <a href="./index.html">Return</a>
+    <div class="inner"></div>
+
+    <script src="./colors.js"></script>
   </body>
 </html>
